@@ -1,2 +1,2 @@
 # ShortestPathVisual
-Hellooo I am Minh :>
+java --module-path "C:\Users\Admin\Downloads\javafx-sdk-16\lib" --add-modules javafx.controls,javafx.fxml -jar pathFinding.jar
